# vacancy

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  run_tests.sh
back/: pyproject.toml
back/database/: tg_last_known_ids.json
back/src/business/exceptions/: exceptions.py
back/src/business/usecases/: change_vacancy_status_command.py  generate_cover_latter_command.py  get_vacancies_from_source_command.py  parse_vacancy_command.py  show_user_command.py  show_vacancies_command.py
back/src/details/auth/: authorizer.py
back/src/details/factory/: app_factory.py
back/src/details/file_repository/: file_message.py  file_repository.py  file_user_repository.py  file_vacancy_repository.py
back/src/details/utils/: __init__.py  command_registry.py  console_logger.py  loggers.py  matcher.py  pathes.py  serializer.py  settings.py  text.py
back/src/sources/freelanceru/: freelanceru.py
back/src/sources/telegram/: tg_api.py  (+3 more)
back/src/ui/: formatter.py  short_vacancy_card.py  vacancy_card.py
vacancy_back/: Dockerfile  pyproject.toml  run_tests.sh
vacancy_back/acceptance_tests/features/: convert_chat.feature  environment.py  save_chat.feature  show_main_page.feature
vacancy_back/test/: app.py  conftest.py  create_tg_session_command.py  test_setuper.py
vacancy_back/test/data/: __init__.py
vacancy_back/test/mocks/: spy_message.py  spy_vacancies_parser.py  spy_vacancy.py
vacancy_back/test/tests/: test_convert_chat_to_vacancies_command.py  test_file_message.py  test_file_vacancy.py  test_freelanceru.py  test_system.py
vacancy_back/test_data/: messages.jsonl
vacancy_back/vacancy/main/: app_setuper.py  main.py
vacancy_back/vacancy/sources/: chat.py
vacancy_back/vacancy/ui/: main_page.py
vacancy_back/vacancy/usecases/: convert_chat_to_vacations_command.py  save_chat_command.py
vacancy_back/vacancy/utils/: __init__.py
(+86 files in other folders)
